--- a/index.html
+++ b/index.html
@@ -60,18 +60,35 @@ $text-color: red;
 }
 
 #square {
-    @include shape(50px, 50px, red)
+    @include shape(50px, 50px, red);
 }
 
 #rect-a {
-    @include shape(100px, 50px, blue)
+    @include shape(100px, 50px, blue);
 }
 
 #rect-b {
-    @include shape(50px, 100px, orange)
+    @include shape(50px, 100px, orange);
 }
+
 </style>
 
 <div id="square"></div>
 <div id="rect-a"></div>
 <div id="rect-b"></div>
+
+
+<!-- Forth practice -->
+<style type='text/scss'>
+
+
+
+#box {
+  width: 150px;
+  height: 150px;
+  background-color: red;
+  @include border-stroke(medium);
+}
+</style>
+
+<div id="box"></div>
