--- a/index.html
+++ b/index.html
@@ -81,7 +81,20 @@ $text-color: red;
 <!-- Forth practice -->
 <style type='text/scss'>
 
-
+@mixin border-stroke($val) {
+    @if $val == light {
+        border: 1px solid black;
+    }
+    @else if $val == medium {
+        border: 3px solid black;
+    }
+    @else if $val == heavy {
+        border: 6px solid black;
+    }
+    @else {
+        border: none;
+    }
+}
 
 #box {
   width: 150px;
