--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $text-color: red;
 <div id="rect-b"></div>
 
 
-<!-- Forth practice -->
+/* Forth practice */
 <style type='text/scss'>
 
 @mixin border-stroke($val) {
@@ -105,3 +105,18 @@ $text-color: red;
 </style>
 
 <div id="box"></div>
+
+/* Fifth practice */
+<style type='text/scss'>
+
+@for $j from 1 to 6 {
+    .text-#{$j} { font-size: 15px * $j; }
+}
+
+</style>
+
+<p class="text-1">Hello</p>
+<p class="text-2">Hello</p>
+<p class="text-3">Hello</p>
+<p class="text-4">Hello</p>
+<p class="text-5">Hello</p>
