--- a/index.html
+++ b/index.html
@@ -120,3 +120,18 @@ $text-color: red;
 <p class="text-3">Hello</p>
 <p class="text-4">Hello</p>
 <p class="text-5">Hello</p>
+
+/* sixth practice */
+<style type='text/scss'>
+
+
+
+div {
+  height: 200px;
+  width: 200px;
+}
+</style>
+
+<div class="blue-bg"></div>
+<div class="black-bg"></div>
+<div class="red-bg"></div>
