--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@ $text-color: red;
 /* sixth practice */
 <style type='text/scss'>
 
-
+@each $color in blue, black, red {
+    .#{$color}-bg {background-color: $color;}
+}
 
 div {
   height: 200px;
