--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- First practice -->
+<!-- First practice: 
+Create a variable $text-color and set it to red. 
+Then change the value of the color property for the .blog-post and h2 to the $text-color variable. -->
 <style type='text/scss'>
 
 $text-color: red;
@@ -29,7 +31,9 @@ $text-color: red;
 </div>
 
 
-<!-- Second practice -->
+<!-- Second practice: 
+Use the nesting technique shown above to re-organize the CSS rules for both children of .blog-post element. 
+For testing purposes, the h1 should come before the p element. -->
 <style type='text/scss'>
     .blog-post {
         h1 {
@@ -50,7 +54,11 @@ $text-color: red;
 </div>
 
 
-<!-- Third practice -->
+<!-- Third practice: 
+Write a mixin named shape and give it 3 parameters: $w, $h, and $bg-color. 
+Use the shape mixin to give the #square element a width and height of 50px, and the background color red. 
+For the #rect-a element add a width of 100px, a height of 50px, and the background color blue. 
+Finally, for the #rect-b element add a width of 50px, a height of 100px, and the background color orange. -->
 <style type='text/scss'>
 
 @mixin shape($w, $h, $bg-color) {
@@ -78,7 +86,13 @@ $text-color: red;
 <div id="rect-b"></div>
 
 
-/* Forth practice */
+/* Forth practice:
+Create a mixin called border-stroke that takes a parameter $val. The mixin should check for the following conditions using @if, @else if, and @else directives:
+light - 1px solid black
+medium - 3px solid black
+heavy - 6px solid black
+If the $val parameter value is not light, medium, or heavy, then the border property should be set to none.
+ */
 <style type='text/scss'>
 
 @mixin border-stroke($val) {
@@ -106,7 +120,10 @@ $text-color: red;
 
 <div id="box"></div>
 
-/* Fifth practice */
+/* Fifth practice:
+Write a @for directive that takes a variable $j that goes from 1 to 6.
+It should create 5 classes called .text-1 to .text-5 where each has a font-size set to 15px multiplied by the index.
+ */
 <style type='text/scss'>
 
 @for $j from 1 to 6 {
@@ -121,7 +138,10 @@ $text-color: red;
 <p class="text-4">Hello</p>
 <p class="text-5">Hello</p>
 
-/* sixth practice */
+/* sixth practice:
+Write an @each directive that goes through a list: blue, black, red and assigns each variable to a .color-bg class, where the color part changes for each item to the respective color. 
+Each class should set the background-color to the respective color as well.
+ */
 <style type='text/scss'>
 
 @each $color in blue, black, red {
